# storage-bot

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  classes.py  discordRequestHandler.py  main.py  models.py  pyproject.toml  quickstart.py  slash_commands.py  tests.py
.devcontainer/: Dockerfile  devcontainer.json
storage-bot/: main.py
