[tool.poetry]
name = "storage-bot"
version = "0.1.0"
description = ""
authors = ["alex <alexqing2005@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.78.0"
pydantic = "^1.9.1"
orjson = "^3.7.7"
uvicorn = {extras = ["standard"], version = "^0.18.2"}
PyNaCl = "^1.5.0"
python-dotenv = "^0.20.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
