[tool.poetry]
name = "storage-bot"
version = "1.0.0"
description = ""
authors = ["alex <alexqing2005@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.78.0"
pydantic = "^1.9.1"
orjson = "^3.7.7"
uvicorn = {extras = ["standard"], version = "^0.18.2"}
PyNaCl = "^1.5.0"
python-dotenv = "^0.20.0"
requests = "^2.28.1"
python-magic = "^0.4.27"
google-api-python-client = "^2.65.0"
google-auth = "^2.13.0"
google-auth-oauthlib = "^0.6.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
